--- a/statistics/crossings/crossing_surface.html
+++ b/statistics/crossings/crossing_surface.html
@@ -18,14 +18,6 @@
  </div>
  
  <div class="sidebar">
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_surface.html">Surface Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness.html">Smoothness Condition</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_tactile_paving.html">Tactile Paving P.</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_width.html">Width Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_incline.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_number_revisions.html">Number Of Revisions</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossing Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Crossing Surface</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Surface x Smoothness</a>
@@ -45,14 +37,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-5070c5102991d160b9592d29ca54d864"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "surface", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_10", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Crossing Surface", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-5070c5102991d160b9592d29ca54d864": [{"surface": "asphalt", "count": 460, "percent": "89.67%"}, {"surface": "paving_stones", "count": 22, "percent": "4.29%"}, {"surface": "concrete", "count": 12, "percent": "2.34%"}, {"surface": "compacted", "count": 9, "percent": "1.75%"}, {"surface": "paved", "count": 6, "percent": "1.17%"}, {"surface": "sett", "count": 3, "percent": "0.58%"}, {"surface": "concrete:plates", "count": 1, "percent": "0.19%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-042d359ee323760555598b7000b05975"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "surface", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_10", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Crossing Surface", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-042d359ee323760555598b7000b05975": [{"surface": "?", "count": 1427, "percent": "73.56%"}, {"surface": "asphalt", "count": 460, "percent": "23.71%"}, {"surface": "paving_stones", "count": 22, "percent": "1.13%"}, {"surface": "concrete", "count": 12, "percent": "0.62%"}, {"surface": "compacted", "count": 9, "percent": "0.46%"}, {"surface": "paved", "count": 6, "percent": "0.31%"}, {"surface": "sett", "count": 3, "percent": "0.15%"}, {"surface": "concrete:plates", "count": 1, "percent": "0.05%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
