--- a/statistics/kerbs/kerb_tactile_paving.html
+++ b/statistics/kerbs/kerb_tactile_paving.html
@@ -18,19 +18,6 @@
  </div>
  
  <div class="sidebar">
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_surface.html">Surface Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness.html">Smoothness Condition</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_tactile_paving.html">Tactile Paving P.</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_width.html">Width Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_incline.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_number_revisions.html">Number Of Revisions</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossing Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Crossing Surface</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_number_revisions.html">Number Of Revisions</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Surface x Smoothness</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_types.html">Kerb Type</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_tactile_paving.html">Tactile Paving Presence</a>
@@ -51,14 +38,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-c3d570ad7a8ef2ab7f86a06fad563d0f"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "tactile_paving", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_16", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Tactile Paving Presence", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-c3d570ad7a8ef2ab7f86a06fad563d0f": [{"tactile_paving": "no", "count": 213, "percent": "85.2%"}, {"tactile_paving": "yes", "count": 25, "percent": "10.0%"}, {"tactile_paving": "contrasted", "count": 11, "percent": "4.4%"}, {"tactile_paving": "bad", "count": 1, "percent": "0.4%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-42b91b6c80b11aed3fc66c112b0c664f"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "tactile_paving", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_16", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "Kerb Tactile Paving Presence", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-42b91b6c80b11aed3fc66c112b0c664f": [{"tactile_paving": "?", "count": 2468, "percent": "90.8%"}, {"tactile_paving": "no", "count": 213, "percent": "7.84%"}, {"tactile_paving": "yes", "count": 25, "percent": "0.92%"}, {"tactile_paving": "contrasted", "count": 11, "percent": "0.4%"}, {"tactile_paving": "bad", "count": 1, "percent": "0.04%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
