--- a/statistics/other_footways/other_footways_surface.html
+++ b/statistics/other_footways/other_footways_surface.html
@@ -18,25 +18,6 @@
  </div>
  
  <div class="sidebar">
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_surface.html">Surface Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_smoothness.html">Smoothness Condition</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_tactile_paving.html">Tactile Paving P.</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_width.html">Width Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_incline.html">Incline Values</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/sidewalks/sidewalks_number_revisions.html">Number Of Revisions</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_types.html">Crossing Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossing_surface.html">Crossing Surface</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_smoothness_x_surface.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/crossings/crossings_number_revisions.html">Number Of Revisions</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_x_paving_x_wheelchair.html">Surface x Smoothness</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_types.html">Kerb Type</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_tactile_paving.html">Tactile Paving Presence</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerb_wheelchair_access.html">Wheelchair Acessibility</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_yr_moth_update.html">Year and Month Of Update</a>
-  <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/kerbs/kerbs_number_revisions.html">Number Of Revisions</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_surface.html">Other Footways Surface</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_smoothness_x_surface.html">Surface x Smoothness</a>
   <a href="https://kauevestena.github.io/opensidewalkmap_beta/statistics/other_footways/other_footways_yr_moth_update.html">Year and Month Of Update</a>
@@ -55,14 +36,14 @@
     
   
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.20.1"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
   <div id="vis"></div>
   <script>
     (function(vegaEmbed) {
-      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-6eac78d4f95a76596f2ffbeb3d354924"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "surface", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_20", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "other_footways Surface", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.20.1.json", "datasets": {"data-6eac78d4f95a76596f2ffbeb3d354924": [{"surface": "asphalt", "count": 1181, "percent": "49.07%"}, {"surface": "sett", "count": 363, "percent": "15.08%"}, {"surface": "concrete", "count": 271, "percent": "11.26%"}, {"surface": "paving_stones", "count": 165, "percent": "6.86%"}, {"surface": "paved", "count": 108, "percent": "4.49%"}, {"surface": "concrete:plates", "count": 64, "percent": "2.66%"}, {"surface": "unpaved", "count": 60, "percent": "2.49%"}, {"surface": "wood", "count": 54, "percent": "2.24%"}, {"surface": "ground", "count": 34, "percent": "1.41%"}, {"surface": "gravel", "count": 26, "percent": "1.08%"}, {"surface": "metal", "count": 20, "percent": "0.83%"}, {"surface": "dirt", "count": 13, "percent": "0.54%"}, {"surface": "grass", "count": 10, "percent": "0.42%"}, {"surface": "cobblestone", "count": 9, "percent": "0.37%"}, {"surface": "rock", "count": 9, "percent": "0.37%"}, {"surface": "fine_gravel", "count": 6, "percent": "0.25%"}, {"surface": "concrete:lanes", "count": 5, "percent": "0.21%"}, {"surface": "compacted", "count": 3, "percent": "0.12%"}, {"surface": "grass_paver", "count": 1, "percent": "0.04%"}, {"surface": "pebblestone", "count": 1, "percent": "0.04%"}, {"surface": "mud", "count": 1, "percent": "0.04%"}, {"surface": "Petit_Pav\u00ea", "count": 1, "percent": "0.04%"}, {"surface": "unhewn_cobblestone", "count": 1, "percent": "0.04%"}, {"surface": "sand", "count": 1, "percent": "0.04%"}]}};
+      var spec = {"config": {"view": {"continuousWidth": 300, "continuousHeight": 300}, "title": {"fontSize": 24}}, "data": {"name": "data-3ceed5eee90d3bc4af0be0c21b2e9db2"}, "mark": {"type": "bar"}, "encoding": {"tooltip": [{"field": "percent", "type": "nominal"}], "x": {"field": "surface", "sort": "-y", "type": "nominal"}, "y": {"field": "count", "type": "quantitative"}}, "height": 300, "params": [{"name": "param_20", "select": {"type": "interval", "encodings": ["x", "y"]}, "bind": "scales"}], "title": "other_footways Surface", "width": 650, "$schema": "https://vega.github.io/schema/vega-lite/v5.17.0.json", "datasets": {"data-3ceed5eee90d3bc4af0be0c21b2e9db2": [{"surface": "?", "count": 4182, "percent": "63.47%"}, {"surface": "asphalt", "count": 1181, "percent": "17.92%"}, {"surface": "sett", "count": 363, "percent": "5.51%"}, {"surface": "concrete", "count": 271, "percent": "4.11%"}, {"surface": "paving_stones", "count": 165, "percent": "2.5%"}, {"surface": "paved", "count": 108, "percent": "1.64%"}, {"surface": "concrete:plates", "count": 64, "percent": "0.97%"}, {"surface": "unpaved", "count": 60, "percent": "0.91%"}, {"surface": "wood", "count": 54, "percent": "0.82%"}, {"surface": "ground", "count": 34, "percent": "0.52%"}, {"surface": "gravel", "count": 26, "percent": "0.39%"}, {"surface": "metal", "count": 20, "percent": "0.3%"}, {"surface": "dirt", "count": 13, "percent": "0.2%"}, {"surface": "grass", "count": 10, "percent": "0.15%"}, {"surface": "rock", "count": 9, "percent": "0.14%"}, {"surface": "cobblestone", "count": 9, "percent": "0.14%"}, {"surface": "fine_gravel", "count": 6, "percent": "0.09%"}, {"surface": "concrete:lanes", "count": 5, "percent": "0.08%"}, {"surface": "compacted", "count": 3, "percent": "0.05%"}, {"surface": "grass_paver", "count": 1, "percent": "0.02%"}, {"surface": "pebblestone", "count": 1, "percent": "0.02%"}, {"surface": "mud", "count": 1, "percent": "0.02%"}, {"surface": "Petit_Pav\u00ea", "count": 1, "percent": "0.02%"}, {"surface": "unhewn_cobblestone", "count": 1, "percent": "0.02%"}, {"surface": "sand", "count": 1, "percent": "0.02%"}]}};
       var embedOpt = {"mode": "vega-lite"};
 
       function showError(el, error){
